--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
+# Python 3.7+ required
+
+# Data Science Libraries
 pandas>=1.3.0
 numpy>=1.21.0
+
+# Visualization Libraries
 matplotlib>=3.4.0
-joypy>=0.2.2
+seaborn>=0.11.0
+joypy>=0.2.4
+
+# Statistical Analysis
 scipy>=1.7.0
-jupyter>=1.0.0
+statsmodels>=0.12.0
+
+# Utility Libraries
+calendar  # Built-in Python module
+warnings  # Built-in Python module
+os        # Built-in Python module
